# derrick

./: Cargo.toml  README.md
docker/: baseimage.Dockerfile  publish.sh
examples/: direct_docker.rs
integration-test/: test-docker.rb  test.rb  test_config.json
src/: codebase.rs  config.rs  docker.rs  github.rs  http_server.rs  lib.rs  main.rs  messaging.rs  repository.rs  server.rs  service.rs  traits.rs  workspace.rs  workspace_provider.rs
src/adapters/: docker_adapter.rs  local_sync_adapter.rs  mod.rs  remote_nats_adapter.rs  testing_adapter.rs
src/workspace_controllers/: docker.rs  local_sync.rs  local_temp_sync.rs  mod.rs  remote_nats.rs  testing.rs
src/workspace_providers/: docker.rs  local_temp_sync.rs  mod.rs
