[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
infrastructure = { path = "../infrastructure" }
octocrab = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
shell-escape = { workspace = true }
regex = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
models = { path = "../models" }
bollard = "0.16.1"

[dev-dependencies]
test-log = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
test_utils = { path = "../test_utils" }

[features]
integration_testing = []
default = []
