[package]
name = "derrick"
version = "0.2.1"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A tool for provisioning workspaces to run code projects in."

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bollard = "0.18"
regex = "1.10"
tracing = { version = "0.1", features = ["log"] }
base64 = "0.22"
derive_builder = "0.20"
itertools = { version = "0.14" }
jsonwebtoken = "9.2"
url = "2.5"
dotenvy = "0.15"

tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"
async-nats = "0.38"
futures-util = "0.3"
rand = "0.8"
uuid = { version = "1.8", features = ["v4", "serde"] }
shell-escape = "0.1"
octocrab = "0.42"
clap = { version = "4.5", features = ["derive"] }
dropshot = "0.15"
schemars = "0.8"
http = "1.1"
tracing-subscriber = "0.3"
whoami = "1.5"
sha2 = "0.10"
hex = "0.4"
tar = "0.4.43"

[dev-dependencies]
regex = "1.10"

# Testing
test-log = { version = "0.2", default-features = false, features = [
    "trace",
] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "json",
] }

[features]
integration_testing = []
default = []
[profile.dev]
incremental = true
debug = 0
